gobmkida/c1/accuratelib
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2289:27: error: use of undeclared identifier 'dword_A741AC'
if ( !byte_9AA89F[v17] && dword_A741AC[v17] != v9 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2289:7: error: use of undeclared identifier 'byte_9AA89F'
if ( !byte_9AA89F[v17] && dword_A741AC[v17] != v9 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2295:1: error: use of undeclared identifier 'dword_A741AC'
dword_A741AC[v17] = v9; 
^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2297:7: error: use of undeclared identifier 'byte_9AA88C'
if ( !byte_9AA88C[v17] && string_number[v17 + 384] != v9 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2333:24: error: use of undeclared identifier 'byte_9AA89F'
&& ( ( unsigned __int8)byte_9AA89F[v23] != color || string[string[239].neighborlist[v23 + 160]].mark != v8) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2334:24: error: use of undeclared identifier 'byte_9AA88C'
&& ( ( unsigned __int8)byte_9AA88C[v23] != color || string[string[239].neighborlist[v23 + 141]].mark != v8) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2364:22: error: use of undeclared identifier 'byte_9AA89F'
|| ( unsigned __int8)byte_9AA89F[v25] == color && string[string[239].neighborlist[v25 + 160]].mark == v8 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/engine/board.c:2365:22: error: use of undeclared identifier 'byte_9AA88C'
|| ( unsigned __int8)byte_9AA88C[v25] == color && string[string[239].neighborlist[v25 + 141]].mark == v8 
                     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/accuratelib/src/obj/1/board.o] Error 1
